test/semantic/error/err_03_forward_ref_proc.pl0
program forwardRef;
procedure A();
begin
  call B(); { Error: B not defined yet }
end;
procedure B();
begin end;
begin call A() end